# AIPilipinas-Tflite

./: .gitignore  README.md
android/FlowersClassifier/: settings.gradle
android/FlowersClassifier/app/: build.gradle
android/FlowersClassifier/app/src/androidTest/java/com/example/flowersclassifier/: ExampleInstrumentedTest.java
android/FlowersClassifier/app/src/main/: AndroidManifest.xml
android/FlowersClassifier/app/src/main/java/com/example/flowersclassifier/: MainActivity.java
android/FlowersClassifier/app/src/main/java/com/example/flowersclassifier/tflite/: Classifier.java  Detector.java  Recognition.java  TFliteModel.java
android/FlowersClassifier/app/src/main/res/layout/: activity_main.xml
android/FlowersClassifier/app/src/main/res/values/: strings.xml
android/FlowersClassifier/app/src/test/java/com/example/flowersclassifier/: ExampleUnitTest.java
android/FlowersClassifier/gradle/wrapper/: gradle-wrapper.properties
python/: pyproject.toml
python/custom-model/: model.tflite  notebook.ipynb
python/custom-model/model/: saved_model.pb
python/custom-model/model/variables/: variables.index
python/flowers-classifier/: model.py
