[tool.poetry]
name = "AIPilipinas-Demo"
version = "0.1.0"
description = ""
authors = ["haruiz <henryruiz22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.3.1"
tflite-model-maker = "^0.2.3"
jupyterlab = "^2.2.9"
notebook = "^6.1.5"
tensorflow-datasets = "^4.1.0"
ipywidgets = "^7.5.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
